--- a/AlgoLifter/AlgoLifter.csproj
+++ b/AlgoLifter/AlgoLifter.csproj
@@ -88,7 +88,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Infrastructure\CommandBuilder.cs" />
+    <Compile Include="Infrastructure\ICommandBuilder.cs" />
     <Compile Include="Infrastructure\IPortCommunicator.cs" />
     <Compile Include="Infrastructure\TMCLReturnStatus.cs" />
     <Compile Include="Modules\DisplayCommander\DisplayCommanderModule.cs" />
