--- a/AlgoLifter/AlgoLifter.csproj
+++ b/AlgoLifter/AlgoLifter.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Infrastructure\SerialDataReceivedEvent.cs" />
     <Compile Include="Modules\TMCLCommands\Services\TMCLCommandBuilder.cs" />
     <Compile Include="Modules\TMCLCommands\TMCLCommandModule.cs" />
+    <Compile Include="Properties\Annotations.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\MainWindowView.xaml.cs">
       <DependentUpon>MainWindowView.xaml</DependentUpon>
